<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PirateMadness</string>
    <string name="score_board">Score Board</string>
    <string name="settings">Settings</string>
    <string name="play_game">Play</string>
    <string name="text_difficulty">Difficulty : </string>
    <string name="easy_mode">Easy</string>
    <string name="hard_mode">Hard</string>
    <string name="player1">Player1</string>
    <string name="player2">Player2</string>
    <string name="text_sound">Sound : </string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="back">Back</string>
    <string name="choose_your_character">Choose your character</string>
    <string name="choose_your_map">Choose your map</string>
    <string name="menu">Menu</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="prototype_image_caharacter_text">character</string>
    <string name="prototype_text_text">name character</string>
    <string name="text_score_board">Score Board</string>
    <string name="sound">sound</string>
    <string name="init_progress1">Battleground\'s initialisation (step 1\/4)</string>
    <string name="init_progress2">your cocktail on the beach is ready (step 2\/4)</string>
    <string name="init_progress3">Pirates anchored (step 3\/4)</string>
    <string name="init_progress4">Are you ready to died? (step 4\/4)</string>
    <string name="textview_initializer">Preparation of your world</string>
    <string name="exit">Exit</string>
    
    

</resources>
