<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Black" >

    <RadioGroup
        android:id="@+id/radio_group_difficulty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal"
        android:padding="5dp" >

        <TextView
            android:id="@+id/text_difficulty"
            android:text="@string/text_difficulty"
            android:textColor="@color/white" />

        <RadioButton
            android:id="@+id/easy_mode"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:checked="true"
            android:gravity="center"
            android:text="@string/easy_mode"
            android:textColor="@color/white" />

        <RadioButton
            android:id="@+id/hard_mode"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:gravity="center"
            android:text="@string/hard_mode"
            android:textColor="@color/white" />
    </RadioGroup>

    <EditText
        android:id="@+id/name_player1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/radio_group_difficulty"
        android:layout_centerHorizontal="true"
        android:background="@color/white"
        android:gravity="left"
        android:hint="@string/player1"
        android:layout_margin="5dp"/>

    <EditText
        android:id="@+id/name_player2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/name_player1"
        android:layout_centerHorizontal="true"
        android:background="@color/white"
        android:gravity="left"
        android:hint="@string/player2"
        android:layout_margin="5dp"
	/>    

    <RadioGroup
        android:id="@+id/radio_group_sound"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/name_player2"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal"
        android:padding="5dp" >

        <TextView
            android:id="@+id/text_sound"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:hint="@string/text_sound"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:textColor="@color/white" />

        <RadioButton
            android:id="@+id/button_sound_on"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:gravity="center"
            android:text="@string/on"
            android:textColor="@color/white" />

        <RadioButton
            android:id="@+id/button_sound_off"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/off"
            android:textColor="@color/white" />
    </RadioGroup>

    <Button
        android:id="@+id/choose_your_character"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_below="@id/radio_group_sound"
        android:layout_centerInParent="true"
        android:background="@drawable/button_standart_gimp"
        android:gravity="center"
        android:layout_margin="10dp"
        android:text="@string/choose_your_character" />

    <Button
        android:id="@+id/choose_your_map"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_below="@id/choose_your_character"
        android:layout_centerInParent="true"
        android:background="@drawable/button_standart_gimp"
        android:gravity="center"
        android:layout_margin="10dp"
        android:text="@string/choose_your_map" />

    <LinearLayout
        android:id="@+id/linear_layout_button"
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_below="@id/choose_your_map"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/button_menu"
            style="?android:attr/buttonBarButtonStyle"
            android:background="@drawable/button_standart_gimp"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:text="@string/menu"
            android:layout_gravity="bottom"
            android:gravity="center" 
            android:layout_marginLeft="50dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"/>

        <Button 
            android:id="@+id/button_play"
            style="?android:attr/buttonBarButtonStyle"
            android:background="@drawable/button_standart_gimp"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:text="@string/play_game"
            android:layout_gravity="bottom"
            android:gravity="center"
            android:layout_margin="5dp"/>
        <Button 
            android:id="@+id/button_score_board"
            style="?android:attr/buttonBarButtonStyle"
            android:background="@drawable/button_standart_gimp"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:text="@string/score_board"
            android:layout_gravity="bottom"
            android:gravity="center"
            android:layout_margin="5dp"/>

    </LinearLayout>

</RelativeLayout>