<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:background="@drawable/drapeau_pirate">
    
    <ImageButton 
        android:id="@+id/main_menu_sound"
	    android:layout_alignParentTop="true"
	    android:layout_alignParentRight="true"
	    android:layout_width="45dp"
	    android:layout_height="45dp"
	    android:src="@drawable/sound_on"
	    android:clickable="true"
	    android:layout_margin="10dp"
	    android:contentDescription="@string/sound"
	    android:background="@color/white"
	    />
	
	<Button 
	    android:id="@+id/main_menu_score_board"
	    android:layout_width="180dp"
	    android:layout_height="37dp"
	    android:text="@string/score_board"
	    android:gravity="center"
	    android:background="@drawable/button_standart_gimp"
	    android:layout_marginBottom="5dp"
	    android:layout_centerInParent="true"
	    android:alpha="0.8"
	    android:textStyle="bold"/>
	<Button 
	    android:id="@+id/main_menu_settings"
	    android:layout_width="180dp"
	    android:layout_height="37dp"
	    android:text="@string/settings"
	    android:gravity="center"
	    android:background="@drawable/button_standart_gimp"
	    android:layout_above="@id/main_menu_score_board"
	    android:layout_centerInParent="true"
	    android:layout_marginBottom="5dp"
	    android:alpha="0.8"
	    android:textStyle="bold"/>
		
	<Button 
	    android:id="@+id/main_menu_play"
	    android:layout_height="37dp"
	    android:layout_width="180dp"
	    android:text="@string/play_game"
	    android:gravity="center"
	    android:background="@drawable/button_standart_gimp"
	    android:layout_above="@id/main_menu_settings"
	    android:layout_centerInParent="true"
	    android:layout_marginBottom="5dp"
	    android:alpha="0.8"
	    android:textStyle="bold"/>

</RelativeLayout>

